--- a/subject.html
+++ b/subject.html
@@ -4,7 +4,7 @@
 
   <head>
     <title>Football Scoring 101</title>
-	  <link> href="28CW.css" rel="stylesheet">
+	  <link href="28CW.css" rel="stylesheet">
   </head>
 
   <body>
