--- a/Safety.html
+++ b/Safety.html
@@ -5,25 +5,29 @@
     <title>Football Scoring 101</title>
 	   <link href="subjectss.css" rel="stylesheet">
   </head>
-
+   	  <nav class="menu">
+   <ul> <a href="site.html" id="" title="site">Home</a>   
+   <a href="Touchdown.html" id="" title="site">Touchdown</a>   
+   <a href="Fieldgoal.html" id="" title="site">Field-Goal</a>   
+</nav>
   <body>
-   <h1> Ways To Score </h1>
-   <ul> <a href="site.html" id="" title="site">Home</a> </ul>
-   <ul> <a href="Touchdown.html" id="" title="site">Touchdown</a> </ul>
-   <ul><a href="Fieldgoal.html" id="" title="site">Field Goal</a> </ul>
-   <ul><a href="Safety.html" id="" title="site">Safety</a> </ul>
- 
-   <h2> Safety    </h2>
-	   <p>
-	 	   <li> Worth 2 points </li>
-	 	   <li> Scored by tackling the opponent in their endzone </li>
-		   <li> Very rare </li>
-		   <li> Can only be acheived by the defense </li>
-		   <li> <a href="https://en.wikipedia.org/wiki/Safety_(gridiron_football_score)">More info</a> </li>
+   <h1> Safety </h1>
 		   <img src="https://static01.nyt.com/images/2015/09/11/sports/11onepoint-web/11onepoint-web-superJumbo.jpg" alt="Field Goal" height="500px">
-		  
-	   </p>
-
+	 	   <li> Worth 2 points 
+		  <ul> A safety is only worth two points. This may not seem like a lot, but it is. Usually after a score the other team gets the ball. However, when you score a safety, your team gets the ball, making it like two bonus points. </ul>
+		   </li>
+	 	   <li> 
+			  Scored by tackling the opponent in their endzone 
+		    <ul> A safety is achieved by tackling the opponent in their own endzone. This is usually done on plays that go wrong, and lead to huge yardage losses. </ul>
+		   </li>
+		   <li> Very rare 
+		   <ul> Due to the bizarre circumstances in which safeties are scored, they are very rare. This is also due to the fact that they can only occur when a team finds themselves very close to their own endzone. Because a team usually starts 20 yards away, it takes a lot to go wrong for an opportunity for a safety to present itself. </ul>
+		   </li>
+		   <li> Can only be acheived by the defense 
+			   <ul> A safety can only be scored by the defense. It is the only score in football like this, and therfore makes it one of the defenses best accomplishments when it happens. The fact that it can only be scored by the defense is part of why it is so rare. </ul>	
+			   </li>
+		   <li> <a href="https://en.wikipedia.org/wiki/Safety_(gridiron_football_score)">More info</a> </li>
+		   
   </body>
 
 </html>
