--- a/site.html
+++ b/site.html
@@ -5,17 +5,17 @@
     <title>Football Scoring 101</title>
 	   <link href="subjectss.css" rel="stylesheet">
   </head>
-
+   	  <nav class="menu">  
+   <ul> <a href="Touchdown.html" id="" title="site">Touchdown</a>   
+   <a href="Fieldgoal.html" id="" title="site">Field-Goal</a>   
+   <a href="Safety.html" id="" title="site">Safety</a> </ul>
+</nav>
   <body>
-   <h1> Ways To Score </h1>
-   <ul> <a href="site.html" id="" title="site">Home</a> </ul>
-   <ul> <a href="Touchdown.html" id="" title="site">Touchdown</a> </ul>
-   <ul><a href="Fieldgoal.html" id="" title="site">Field Goal</a> </ul>
-   <ul><a href="Safety.html" id="" title="site">Safety</a> </ul>
+   <h1> Ways To Score in Football </h1>
    
    <h2> What is Football?    </h2>
 	   <p>
-	      Watched by hundreds of millions of Americans, Football is the countries most popular sport. There are many leagues, but the most popular is the National Football League (NFL). This website explores the wyas to score in football under NFL rules. 	
+	      Watched by hundreds of millions of Americans, Football is the countries most popular sport. There are many leagues, but the most popular is the National Football League (NFL). This website explores the ways to score in football under NFL rules. 	
 	   </p>
 	   <img src="https://www.profootballhof.com/assets/1/6/NFLSchedule1050Web.jpg">
   </body>
